<resources>
    <string name="app_name">Poll Vaults</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="trending">Trending</string>
    <string name="browse">Browse</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="you">You</string>
    <string name="profile">Profile</string>
</resources>
