<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">


    <item android:title="@string/explore">
        <menu>
            <item
                android:id="@+id/nav_trending"
                android:icon="@drawable/ic_menu_poll"
                android:title="@string/trending"/>
            <item
                android:id="@+id/nav_browse"
                android:icon="@drawable/ic_menu_browse"
                android:title="@string/browse"/>
            <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_menu_search"
                android:title="@string/search"/>
        </menu>
    </item>

    <item android:title="@string/you">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/profile"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings"/>
        </menu>
    </item>

</menu>
